syntax = "proto3";
//生成文件所在包名
option java_package = "cn.aberic.bother.entity.proto";
//生成的java文件名
option java_outer_classname = "MapListStringProto";

// 节点基类对象
message MapListString {
    repeated string stringList = 1; // 字符串类型集合
}
