syntax = "proto3";
//生成文件所在包名
option java_package = "cn.aberic.bother.entity.proto.node";
//生成的java文件名
option java_outer_classname = "NodeProto";

import "node/NodeBase.proto";
import "node/NodeAssist.proto";
import "node/NodeElection.proto";
import "MapListString.proto";

// 节点基类对象
message Node {
    int64 timestamp = 1; // 创建时间戳/节点ID
    string address = 2; // 节点地址
    string accountAddress = 3; // 节点绑定账户地址
    int32 cpu = 4; // CPU个数
    int64 totalMemory = 5; // 总内存
    repeated string hashes = 6; // 节点执行合约的Hash列表
    map<string, string> addressElectionMap = 7; // 当前Hash访问的竞选中节点
    map<string, NodeBase> nodeBaseAssistMap = 8; // 当前Hash访问的竞选节点指定协助节点，协助节点将辅助竞选节点管理竞选节点下的子节点，即用于处理除了竞选工作以外的所有事务，如：内部排序、节点加减管理等
    map<string, MapListString> addressElectionsMap = 9; // 当前Hash竞选中节点集合 <= 50
    map<string, MapListString> addressMap = 10; // 当前Hash已知备用节点集合/随机节点数 <= 100
    map<string, NodeAssist> nodeAssistMap = 11; // 当前Hash协助节点对象
    map<string, NodeElection> nodeElectionMap = 12; // 当前Hash节点竞选对象
}
